deployments/pvc-e2e-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    k8s-app: pvc-e2e
spec:
  containers:
    - image: nginx
      name: nginx
      volumeMounts:
        - mountPath: /var/www
          name: nginx-pvc
  volumes:
    - name: nginx-pvc
      persistentVolumeClaim:
        claimName: nginx-pvc
